adding prediction line

--- a/x.ipynb
+++ b/x.ipynb
@@ -238,7 +238,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "img,labels = test_img[0]\n",
+    "print(predit_image(img,model))"
+   ]
   }
  ],
  "metadata": {
